--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,15 @@
         payment_method:
           credit_card: "クレジットカード"
           transfer: "銀行振込"
+        status:
+           waiting_for_payment: "入金待ち"
+           payment_comfirmation: "入金済み"
+           making: "製作中"
+           ready_for_send: "発送準備中"
+           sent: "発送済み"
+      order_detail:
+        making_status:
+           bf_making: "着手不可"
+           waiting_for_making: "製作待ち"
+           making: "製作中"
+           done: "製作完了"
